# web-scraper

./: README.md  pyproject.toml  requirements.txt  scraper.py
web_scraper/: __init__.py  connection.py
